upload backup posts & privacy page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -120,5 +120,138 @@ footer a{
     font-size: 12px;
     margin-bottom: 5px;
     padding: 3px 10px;
-    display: block;
+    display: inline-block;
+}
+.nav {
+    padding: 10px 0;
+    background-color: #484848;
+}
+
+.nav ul {
+    padding-left: 0;
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.nav ul li {
+    display: inline-block;
+    margin: 0 20px;
+}
+
+.nav ul li a {
+    text-decoration: none;
+    color: #f58850;
+    /*color: #f04e19;*/
+}
+.nav ul li a.active {
+    color: #f04e19;          /* как при hover */
+    font-weight: 700;
+    border-bottom: 2px solid #f04e19;
+}
+
+
+.nav ul li a:hover {
+    color: #f04e19;
+    /*color: #f04e19;*/
+}
+
+.stick {
+    margin-bottom: 0;
+    background-color: #f58850;
+}
+
+table a {
+    color: #333;
+    text-decoration: none;
+}
+
+.community .search {
+    position: relative;
+}
+
+.community .search form input {
+    border-radius: 30px;
+    padding: 8px 30px;
+    height: auto;
+}
+
+.community .search form button {
+    width: auto;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 9px 15px;
+    height: auto;
+    border-radius: 30px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    background-color: #484848;
+}
+
+.community .search form button img {
+    width: 20px;
+    height: 20px
+}
+
+.community .table-wrap table th {
+    background-color: #f7f7f7;
+    padding: 10px;
+    border-top: 1px solid #333;
+}
+
+.community .table-wrap table td {
+    padding: 10px;
+    border: 1px solid #edeceb;
+}
+
+.community .table-wrap table td .date {
+    font-size: 14px;
+}
+
+.community .aic {
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.community .btn-wrap {
+    margin-top: 0;
+}
+
+.community .btn-wrap .more {
+    background-color: #f58850;
+}
+
+nav ul.pagination li.active span {
+    color: #f58850;
+    border-color: #f58850;
+}
+nav ul.pagination li{
+    margin: 0 2px;
+}
+nav ul.pagination li a, nav ul.pagination li span{
+    font-size: 13px;
+    color: rgb(51, 51, 51);
+    padding: 10px 15px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgb(237, 236, 235);
+    transition: all .3s ease;
+}
+nav ul.pagination li a:hover{
+    color: #f58850;
+    border-color: #f58850;
+}
+nav ul.pagination li a::after{
+    display: none;
+}
+.community form input[type='radio'] {
+    width: auto;
+    height: auto;
+}
+
+.community form .form-group {
+    display: inline-block;
+    margin-bottom: 0;
+    margin-right: 20px;
 }
